--- a/app/src/main/res/layout/forecast.xml
+++ b/app/src/main/res/layout/forecast.xml
@@ -3,35 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
-    android:layout_margin="12dp"
-    app:cardCornerRadius="4dp">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginRight="15dp"
+    app:cardCornerRadius="4dp"
+    tools:layout_height="530dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="18dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/placeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="预报"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="20sp"
-            tools:layout_height="40dp"
-            tools:layout_width="match_parent" />
+            android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/placeAddress"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/forecastLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="14sp"
-            tools:layout_height="40dp"
-            tools:layout_width="match_parent" />
+            android:orientation="vertical"
+            tools:layout_height="70dp" />
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
