--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -16,7 +16,7 @@
         android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/material_on_primary_emphasis_medium">
+        android:background="?attr/colorPrimary">
 
         <EditText
             android:id="@+id/searchPlaceEdit"
@@ -28,7 +28,9 @@
             android:background="@drawable/search_bg"
             android:hint="输入地址"
             android:paddingStart="10dp"
-            android:paddingEnd="10dp" />
+            android:paddingEnd="10dp"
+            android:textColor="#000"
+            tools:text="666" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -36,6 +38,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/actionBarLayout"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:visibility="gone" />
 </RelativeLayout>
